--- a/ContactApp/GridCollectionViewCell.xib
+++ b/ContactApp/GridCollectionViewCell.xib
@@ -10,10 +10,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectioncell" id="gTV-IL-0wX" customClass="GridCollectionViewCell" customModule="ContactApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="def" translatesAutoresizingMaskIntoConstraints="NO" id="acK-zt-KbB">
@@ -24,7 +24,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k9S-7M-jq0">
-                        <rect key="frame" x="0.0" y="149" width="200" height="60"/>
+                        <rect key="frame" x="0.0" y="149" width="150" height="60"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="xko-g7-ip4"/>
                         </constraints>
@@ -35,6 +35,7 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="k9S-7M-jq0" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="149" id="5JZ-Ok-ehg"/>
                 <constraint firstAttribute="trailing" secondItem="k9S-7M-jq0" secondAttribute="trailing" id="72z-FQ-KTR"/>
