--- a/ContactApp/Base.lproj/Main.storyboard
+++ b/ContactApp/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 </connections>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6Cy-07-knH">
-                                <rect key="frame" x="5" y="113" width="409" height="749"/>
+                                <rect key="frame" x="5" y="144" width="409" height="718"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -61,7 +61,11 @@
                                 </connections>
                             </tableView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Rqf-F5-esX">
-                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="jxG-uo-rfo"/>
+                                    <constraint firstAttribute="height" constant="30" id="nbq-hp-8g8"/>
+                                </constraints>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="BlP-QG-2Fq"/>
@@ -71,9 +75,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Cy-07-knH" firstAttribute="top" secondItem="vzl-da-YCK" secondAttribute="top" id="1cX-F4-Xtk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vzl-da-YCK" secondAttribute="bottom" id="8Re-tr-Igx"/>
                             <constraint firstItem="Rqf-F5-esX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8V4-Jv-QOf"/>
-                            <constraint firstItem="vzl-da-YCK" firstAttribute="top" secondItem="Rqf-F5-esX" secondAttribute="bottom" id="PDn-ba-vJf"/>
                             <constraint firstItem="6Cy-07-knH" firstAttribute="trailing" secondItem="vzl-da-YCK" secondAttribute="trailing" id="Tli-Xr-TQ1"/>
                             <constraint firstItem="vzl-da-YCK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bLZ-qw-lwd"/>
                             <constraint firstItem="Rqf-F5-esX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bQz-ft-JgV"/>
