--- a/ContactApp/GridCollectionViewCell.xib
+++ b/ContactApp/GridCollectionViewCell.xib
@@ -9,26 +9,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectioncell" id="gTV-IL-0wX" customClass="GridCollectionViewCell" customModule="ContactApp" customModuleProvider="target">
+        <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" semanticContentAttribute="forceLeftToRight" reuseIdentifier="collectioncell" id="gTV-IL-0wX" customClass="GridCollectionViewCell" customModule="ContactApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="def" translatesAutoresizingMaskIntoConstraints="NO" id="acK-zt-KbB">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="150"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="def" translatesAutoresizingMaskIntoConstraints="NO" id="acK-zt-KbB">
+                        <rect key="frame" x="10" y="0.0" width="130" height="150"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="150" id="C8n-qC-VOa"/>
-                            <constraint firstAttribute="width" constant="200" id="xtJ-M9-mD3"/>
+                            <constraint firstAttribute="height" constant="150" id="jpa-vH-EUc"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k9S-7M-jq0">
-                        <rect key="frame" x="0.0" y="149" width="150" height="60"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="60" id="xko-g7-ip4"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                        <rect key="frame" x="0.0" y="176" width="150" height="24"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -37,19 +33,20 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="k9S-7M-jq0" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="149" id="5JZ-Ok-ehg"/>
-                <constraint firstAttribute="trailing" secondItem="k9S-7M-jq0" secondAttribute="trailing" id="72z-FQ-KTR"/>
-                <constraint firstAttribute="trailing" secondItem="acK-zt-KbB" secondAttribute="trailing" id="Nzp-e7-tYR"/>
-                <constraint firstItem="acK-zt-KbB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Y4b-ZF-AgR"/>
-                <constraint firstItem="acK-zt-KbB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="YVe-IB-uBM"/>
-                <constraint firstAttribute="bottom" secondItem="k9S-7M-jq0" secondAttribute="bottom" id="d94-hh-9sb"/>
-                <constraint firstItem="k9S-7M-jq0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="dvv-ST-waW"/>
+                <constraint firstAttribute="bottom" secondItem="k9S-7M-jq0" secondAttribute="bottom" id="Fhv-qh-nvo"/>
+                <constraint firstAttribute="trailing" secondItem="acK-zt-KbB" secondAttribute="trailing" constant="10" id="Sbs-lH-I2o"/>
+                <constraint firstAttribute="bottom" secondItem="acK-zt-KbB" secondAttribute="bottom" constant="50" id="Syj-kQ-YYc"/>
+                <constraint firstItem="acK-zt-KbB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="jL8-2k-az6"/>
+                <constraint firstAttribute="trailing" secondItem="k9S-7M-jq0" secondAttribute="trailing" id="kYm-ru-sct"/>
+                <constraint firstItem="k9S-7M-jq0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lE2-wg-uVI"/>
+                <constraint firstItem="acK-zt-KbB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="mo8-ww-ga4"/>
             </constraints>
+            <size key="customSize" width="166" height="189"/>
             <connections>
                 <outlet property="imagehandler" destination="acK-zt-KbB" id="bcG-ec-UIG"/>
                 <outlet property="namehandler" destination="k9S-7M-jq0" id="1aG-cn-OJE"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="91.741071428571431"/>
+            <point key="canvasLocation" x="-82.608695652173921" y="38.169642857142854"/>
         </collectionViewCell>
     </objects>
     <resources>
